--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <!-- <script>
+      generatePassword();
+    </script> -->
   </body>
 </html>
