Edited script.js file.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="password"
             aria-label="Generated Password"
           ></textarea>
         </div>
